--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- navbar start from here -->
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-secondary bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand">
                   <img src="images/logo.png" alt="">
