--- a/index.html
+++ b/index.html
@@ -99,6 +99,30 @@
       </div>
     </div>
     <!-- carousel end here -->
+    <!-- catagories start from here -->
+    <div class="container catagories">
+      <div class="row">
+        <div class="col-md-4 ">
+        <div class="cat1  d-flex justify-content-center align-items-center">
+          <h1> Watch</h1>
+          <img src="images/categories/watch.png" alt="">
+        </div>
+        </div>
+        <div class="col-md-4">
+        <div class="cat2  d-flex justify-content-center align-items-center">
+          <h1> Bag </h1>
+          <img src="images/categories/bag.png" alt="">
+        </div>
+        </div>
+        <div class="col-md-4">
+        <div class="cat3  d-flex justify-content-center align-items-center">
+          <h1>Shoes </h1>
+          <img src="images/categories/shoes.png" alt="">
+        </div>
+        </div>
+      </div>
+    </div>
+    <!-- catagories end here  -->
     <!--javascript part start from here -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
